add click to images

--- a/galeria.html
+++ b/galeria.html
@@ -42,7 +42,7 @@ layout: default
                     <div id="isotope_container" class="isotope row masonry-layout">
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/01.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg"><img src="example/gallery/01.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg"></a></h3>
@@ -52,7 +52,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/02.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg"><img src="example/gallery/02.jpg" alt=""></a>
 
                             <div>
                                 <h3> <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg"></a></h3>
@@ -63,7 +63,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/03.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg"><img src="example/gallery/03.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg"></a></h3>
@@ -74,7 +74,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
 
-                                <img src="example/gallery/04.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg"><img src="example/gallery/04.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg"></a></h3>
@@ -85,7 +85,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
 
-                                <img src="example/gallery/05.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg"><img src="example/gallery/05.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg"></a></h3>
@@ -96,7 +96,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/06.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg"><img src="example/gallery/06.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg"></a></h3>
@@ -107,7 +107,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
 
-                                <img src="example/gallery/07.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg"><img src="example/gallery/07.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg"></a></h3>
@@ -118,7 +118,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/08.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg"><img src="example/gallery/08.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg"></a></h3>
@@ -129,7 +129,7 @@ layout: default
 
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
 
-                                <img src="example/gallery/09.jpg" alt="">
+                              <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg"><img src="example/gallery/09.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg"></a></h3>
@@ -139,7 +139,7 @@ layout: default
                         </div>
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
 
-                                <img src="example/gallery/10.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg"><img src="example/gallery/10.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg"></a></h3>
@@ -149,7 +149,7 @@ layout: default
                         </div>
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
 
-                                <img src="example/gallery/11.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg"><img src="example/gallery/11.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg"></a></h3>
@@ -159,7 +159,7 @@ layout: default
                         </div>
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <img src="example/gallery/12.jpg" alt="">
+                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg"><img src="example/gallery/12.jpg" alt=""></a>
 
                             <div>
                                 <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg"></a></h3>
