change timblertable - Horários dos cursos regulares

--- a/horarios.html
+++ b/horarios.html
@@ -27,7 +27,7 @@ layout: default
         <div class="container">
             <div class="row">
                  <header class="section_header text-center">
-                    <h2>Horários de aula</h2>
+                    <h2>Horários dos cursos regulares</h2>
                 </header>
             </div>
             <div class="row">
@@ -511,5 +511,3 @@ layout: default
             </div>
         </div>
     </section>
-
- 
