add link to samba timetable

--- a/samba.html
+++ b/samba.html
@@ -68,7 +68,9 @@ layout: default
 
         </div>
         <!-- .entry-content -->
-
+        <h4>
+          <a href="horarios" rel="bookmark">Veja aqui nossos horários de Samba</a>
+        </h4>
       </article>
 
     </div>
