--- a/samba.html
+++ b/samba.html
@@ -68,12 +68,18 @@ layout: default
 
         </div>
         <!-- .entry-content -->
-        <h4>
-          <a href="horarios" rel="bookmark">Veja aqui nossos horários de Samba</a>
-        </h4>
       </article>
 
     </div>
   </div>
 </div>
+</section>
+<section id="mail_us" class="dark_section parallax">
+    <div class="container text-center">
+        <div class="row">
+            <header class="section_header text-center">
+              <a href="horarios.html"><h2>Veja aqui nossos horários de Samba</h2></a>
+            </header>
+        </div>
+    </div>
 </section>
