--- a/samba.html
+++ b/samba.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: "Samba"
 ---
 
 
@@ -74,12 +75,4 @@ layout: default
   </div>
 </div>
 </section>
-<section id="mail_us" class="dark_section parallax">
-    <div class="container text-center">
-        <div class="row">
-            <header class="section_header text-center">
-              <a href="horarios.html"><h2>Veja aqui nossos horários de Samba</h2></a>
-            </header>
-        </div>
-    </div>
-</section>
+{% include footer_dance_pages.html %}
