--- a/index.html
+++ b/index.html
@@ -268,13 +268,4 @@ layout: default
     </div>
 </section>
 
-
-<section id="mail_us" class="dark_section parallax">
-    <div class="container text-center">
-        <div class="row">
-            <header class="section_header text-center">
-              <a href="contato.html"><h2>Venha nos visitar para ter a sua melhor experiência de dança</h2></a>
-            </header>
-        </div>
-    </div>
-</section>
+{% include pre_footer.html %}
