fix pre_footer variables

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+pre_footer_text: Venha nos visitar para ter a sua melhor experiência de dança
+pre_footer_link: contato
 ---
 <span id="highlight_page_id" class="hidden">0</span>
 <section id="mainslider">
