first text change

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ pre_footer_link: contato
 <section class="features grey_section">
     <div class="container">
         <header class="section_header text-center">
-            <h2>Principais recursos</h2>
+            <h2>Gêneros de dança para cada estilo, gosto e idade </h2>
         </header>
         <div class="row">
             <div class="col-sm-4 text-center">
@@ -98,7 +98,7 @@ pre_footer_link: contato
                        <i class="fa fa-user"></i>
                     </div>
                     <h4>Aulas para adultos</h4>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Para jovens e adultos, as aulas são realizadas com professores especializados proporcionando a aprendizagem dos passos e o desenvolvimento da musicalidade.</p>
                 </div>
             </div>
             <div class="col-sm-4 text-center">
@@ -107,7 +107,7 @@ pre_footer_link: contato
                        <i class="fa fa-child"></i>
                     </div>
                     <h4>Aulas para crianças</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque.</p>
+                    <p>A prática da dança é um exercício que estimula crianças a combater inseguranças, a partilhar experiências e a se desenvolver físico e emocionalmente. </p>
                 </div>
             </div>
             <div class="col-sm-4 text-center">
@@ -115,8 +115,8 @@ pre_footer_link: contato
                     <div class="icon">
                        <i class="fa fa-heart-o"></i>
                     </div>
-                    <h4>Coreografia para casamentos</h4>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <h4>Coreografias para casamento</h4>
+                    <p>Muitos noivos sonham em fazer de sua primeira valsa um sonho. Para tal nós desenvolvemos coreografias únicas e especiais, misturando dança, melodia e emoção.</p>
                 </div>
             </div>
         </div>
