second change index

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ pre_footer_link: contato
                     <div class="icon">
                        <i class="fa fa-flag-o"></i>
                     </div>
-                    <h4>Nós somos criativos</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <h4>Nossa estrutura</h4>
+                    <p class="text-left">Temos ambientes, amplos e climatizados, ideais para a prática de dança com conforto e qualidade. Adaptados para dança de salão, street dance, balé e ritmos diversos, eles são perfeitos para aulas em grupo ou particulares.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 text-center">
@@ -145,7 +145,7 @@ pre_footer_link: contato
                        <i class="fa fa-clock-o"></i>
                     </div>
                     <h4>Somos pontuais</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <p class="text-left">A Compassos conta com turmas distribuídas em diferentes horários ao longo da semana. Estes escolhidos de maneira especial para melhor atender aos nossos alunos.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 text-center">
@@ -154,7 +154,7 @@ pre_footer_link: contato
                        <i class="fa fa-magic"></i>
                     </div>
                     <h4>Nós temos mágica</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <p class="text-left">Sinta a leveza de nossos passos e veja por si mesmo a beleza dos movimentos. Construa parte de suas excelentes memórias tendo êxito em desafios pessoais e em seus sonhos.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 text-center">
@@ -163,7 +163,7 @@ pre_footer_link: contato
                        <i class="fa fa-heart-o"></i>
                     </div>
                     <h4>Amamos o que fazemos</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <p class="text-left">Não é o ritmo nem os passos ou mesmo a música que fazem a dança, mas a paixão efervescente que vai dentro d'alma de quem ousa dançar.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 text-center">
@@ -171,8 +171,8 @@ pre_footer_link: contato
                     <div class="icon">
                        <i class="fa fa-comments-o"></i>
                     </div>
-                    <h4>Somos amigáveis</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <h4>Somos amáveis</h4>
+                    <p class="text-left">Promover a alegria, a formação de laços de amizade e a melhoria da qualidade de vida a partir da prática de dança são os maiores objetivos da Compassos.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 text-center">
@@ -180,8 +180,8 @@ pre_footer_link: contato
                     <div class="icon">
                        <i class="fa fa-smile-o"></i>
                     </div>
-                    <h4>Nós somos os melhores</h4>
-                    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam.</p>
+                    <h4>Nossa visão</h4>
+                    <p class="text-left">Ser a maior e melhor escola de dança de salão do Centro-Oeste, reconhecida por seu ambiente acolhedor, por sua metodologia humanizada de ensino e pela qualidade técnica de sua equipe.</p>
                 </div>
             </div>
         </div>
