remove capitalize and change index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ pre_footer_link: contato
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas para Crianças</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e Eventos especiais</h4>
+                        <h2 data-animation="fadeInDown">Aulas para crianças</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
                     </div>
                 </div>
             </li>
@@ -26,7 +26,7 @@ pre_footer_link: contato
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
                         <h2 data-animation="fadeInDown">Aulas particulares e em grupo para adultos</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e Eventos especiais</h4>
+                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
                     </div>
                 </div>
             </li>
@@ -40,9 +40,9 @@ pre_footer_link: contato
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
-                    <h2 class="text-center">Bem-vindo a {{ site.title }}!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
-                    </p>
+                    <h2 class="text-center">Você está pronto para sua melhor experiência com dança?</h2>
+                    <h4 class="text-center">Bem-vindos a {{ site.title }}!
+                    </h4>
                 </div>
             </div>
         </div>
