--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@ layout: default
                 <header class="section_header">
                     <h2>Informações de contato</h2>
                 </header>
-                <p>Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. In ac felis quis tortor malesuada pretium. In hac habitasse platea dictumst curabitur nisi hac habitasse platea dictumst maecenas nec odio et ante tincidunt tempus morbi ac felis.
+                <p>Caso tenha alguma dúvida sobre nossas aulas, horários ou queira saber mais sobre assuntos relacionados à dança de salão, ficaremos felizes em respondê-lo(a)!  .
                 <br><br>
                     <strong>Telefone:</strong> (62) 3286 -7624
                 </p>
@@ -39,17 +39,12 @@ layout: default
                     <strong>Email:</strong> <a href="studiocompassos@gmail.com">studiocompassos@gmail.com</a>
                 </p>
                 <p>
-                    <strong>Website: </strong><a href="./">www.company.com</a>
-                </p>
-                <p>
                     <strong>Endereço:</strong> Rua C-116, Quadra 220 lote 1 número 569, Setor Jardim américa, Goiânia, Goiás.
                 </p>
                  <div class="social-mid">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/pg/compassosstudiodedanca" target="blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/compassosstudiodedanca/" target="blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/user/MrCompassos" target="blank"><i class="fa fa-youtube"></i></a>
                 </div>
 
             </div>
