--- a/contato.html
+++ b/contato.html
@@ -33,13 +33,13 @@ layout: default
                 </header>
                 <p>Caso tenha alguma dúvida sobre nossas aulas, horários ou queira saber mais sobre assuntos relacionados à dança de salão, ficaremos felizes em respondê-lo(a)!  .
                 <br><br>
-                    <strong>Telefone:</strong> (62) 3286 -7624
+                    <strong>Telefone:</strong> {{ site.phone_number }}
                 </p>
                 <p>
-                    <strong>Email:</strong> <a href="studiocompassos@gmail.com">studiocompassos@gmail.com</a>
+                    <strong>Email:</strong> <a href="{{ site.email }}">{{ site.email }}</a>
                 </p>
                 <p>
-                    <strong>Endereço:</strong> Rua C-116, Quadra 220 lote 1 número 569, Setor Jardim américa, Goiânia, Goiás.
+                    <strong>Endereço:</strong> {{ site.address }}
                 </p>
                  <div class="social-mid">
                     <a href="https://www.facebook.com/pg/compassosstudiodedanca" target="blank"><i class="fa fa-facebook"></i></a>
