change footer, contact and default layout

--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@ layout: default
                     <strong>Telefone:</strong> {{ site.phone_number }}
                 </p>
                 <p>
-                    <strong>Email:</strong> <a href="{{ site.email }}">{{ site.email }}</a>
+                    <strong>Email:</strong> <a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 </p>
                 <p>
                     <strong>Endereço:</strong> {{ site.address }}
