fix index generos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ pre_footer_link: contato
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
                         <h2 data-animation="fadeInDown">Aulas para crianças</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                        <h4 data-animation="fadeInUp">Estas exploram a capacidade de dança do corpo e o mundo do ritmo e da música</h4>
                     </div>
                 </div>
             </li>
@@ -25,7 +25,7 @@ pre_footer_link: contato
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para adultos</h2>
+                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
                         <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
                     </div>
                 </div>
@@ -107,7 +107,7 @@ pre_footer_link: contato
                        <i class="fa fa-child"></i>
                     </div>
                     <h4>Aulas para crianças</h4>
-                    <p>A prática da dança é um exercício que estimula crianças a combater inseguranças, a partilhar experiências e a se desenvolver físico e emocionalmente. </p>
+                    <p>A prática da dança na infância é um exercício que estimula crianças a combater inseguranças,<br> a partilhar experiências e a se desenvolver físico e emocionalmente. </p>
                 </div>
             </div>
             <div class="col-sm-4 text-center">
@@ -116,7 +116,7 @@ pre_footer_link: contato
                        <i class="fa fa-heart-o"></i>
                     </div>
                     <h4>Coreografias para casamento</h4>
-                    <p>Muitos noivos sonham em fazer de sua primeira valsa um sonho. Para tal nós desenvolvemos coreografias únicas e especiais, misturando dança, melodia e emoção.</p>
+                    <p>Muitos noivos sonham em fazer de sua primeira valsa um verdadeiro sonho. Para tal nós desenvolvemos coreografias únicas e especiais, misturando dança, melodia e emoção.</p>
                 </div>
             </div>
         </div>
