--- a/galeria.html
+++ b/galeria.html
@@ -30,7 +30,7 @@ layout: default
                     <header class="section_header text-center">
                         <h2>nosso portfolio</h2>
                     </header>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit perspiciatis, cupiditate impedit autem dicta harum sint corporis nemo fugit consectetur optio similique ad quod, voluptas earum, omnis veniam amet incidunt!</p>
+                    <p class="text-center">Em alguns momentos da vida, a única maneira de se expressar é dançando</p>
 
                     <div id="isotope_filters">
                         <a href="#" data-filter="*" class="selected">Mostrar tudo</a>
