--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ pre_footer_link: contato
         <ul class="slides">
             <li>
                 <div class="slide_overlay">
-                 <img src="example/flex_slide01.jpg" alt="">
+                 <img src="img/carousel/festa_1.jpg" alt="">
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
@@ -21,7 +21,40 @@ pre_footer_link: contato
             </li>
             <li>
                 <div class="slide_overlay">
-                    <img src="example/flex_slide02.jpg" alt="">
+                    <img src="img/carousel/festa_2.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/evento_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/aula_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
+                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/aula_2.jpg" alt="">
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
