change index images

--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@ pre_footer_link: contato
 ---
 <span id="highlight_page_id" class="hidden">0</span>
 <section id="mainslider">
-
+    <!-- all slides img have 2,4:1 porportional ratio -->
     <div class="flexslider">
         <ul class="slides">
             <li>
                 <div class="slide_overlay">
-                 <img src="img/carousel/festa_1.jpg" alt="">
+                    <img src="img/carousel/evento_1_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Apresentações</h2>
+                        <h4 data-animation="fadeInUp">Eventos com coreografias profissionais</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/aula_1_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Aulas em grupo para jovens e adultos</h2>
+                        <h4 data-animation="fadeInUp">Formação de laços de amizade e a melhoria da qualidade de vida</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/aula_2_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Aulas particulares</h2>
+                        <h4 data-animation="fadeInUp">Acompanhamento individual no desenvolvimento da dança</h4>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="slide_overlay">
+                  <img src="img/carousel/crianças_1.jpg" alt="">
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
@@ -21,45 +54,23 @@ pre_footer_link: contato
             </li>
             <li>
                 <div class="slide_overlay">
-                    <img src="img/carousel/festa_2.jpg" alt="">
+                 <img src="img/carousel/festa_1_1.jpg" alt="">
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                        <h2 data-animation="fadeInDown">Festas de dança</h2>
+                        <h4 data-animation="fadeInUp">Eventos especiais onde todos podem colocar em prática o aprendizado</h4>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="slide_overlay">
-                    <img src="img/carousel/evento_1.jpg" alt="">
+                    <img src="img/carousel/festa_2_1.jpg" alt="">
                 </div>
                 <div class="slide_description_wrapper">
                     <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="slide_overlay">
-                    <img src="img/carousel/aula_1.jpg" alt="">
-                </div>
-                <div class="slide_description_wrapper">
-                    <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="slide_overlay">
-                    <img src="img/carousel/aula_2.jpg" alt="">
-                </div>
-                <div class="slide_description_wrapper">
-                    <div class="slide_description">
-                        <h2 data-animation="fadeInDown">Aulas particulares e em grupo para jovens e adultos</h2>
-                        <h4 data-animation="fadeInUp">Festas de dança e eventos especiais</h4>
+                        <h2 data-animation="fadeInDown">Todos os eventos são especiais</h2>
+                        <h4 data-animation="fadeInUp">Ambiente de descontração entre professores e alunos celebrando a dança</h4>
                     </div>
                 </div>
             </li>
