add margin header and margin index title

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ pre_footer_link: contato
 </section>
 
 <section id="welcome" class="light_section">
-    <div class="container">
+    <div class="container change_distance">
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
